<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pic_title_bg"
        >

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/mine_main_logout_head" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_user"
            android:background="@drawable/btn_login_selector"
            android:text="登陆"
            android:textColor="@drawable/btn_login_textcolor_selector"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_login2"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/btn_login"
            android:background="@drawable/btn_login2_selector"
            android:text="注册"
            android:textColor="@drawable/btn_login_textcolor_selector"
            android:textSize="19sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="2dp"
                android:src="@mipmap/act_my_home_cart" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_cart"
                android:layout_marginTop="8dp"
                android:text="@string/my_home_cart"
                android:textColor="@color/gray_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="2dp"
                android:src="@mipmap/act_my_home_tickets" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_cart"
                android:layout_marginTop="8dp"

                android:text="@string/my_home_tickets"
                android:textColor="@color/gray_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="2dp"
                android:src="@mipmap/act_my_home_goods" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_cart"
                android:layout_marginTop="8dp"

                android:text="@string/my_home_goods"
                android:textColor="@color/gray_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="2dp"
                android:src="@mipmap/act_my_home_card" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_cart"
                android:layout_marginTop="8dp"

                android:text="@string/my_home_card"
                android:textColor="@color/gray_normal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_marginTop="20dp"
        android:background="#33000000" />

    <LinearLayout
        android:id="@+id/ll_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawableLeft="@mipmap/icon_my_home_coupon_45x35"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/my_coupon"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />

    <LinearLayout
        android:id="@+id/ll_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawableLeft="@mipmap/icon_my_home_movies_43x43"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/str_my_movie"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />

    <LinearLayout
        android:id="@+id/ll_favour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawableLeft="@mipmap/icon_my_home_favorites_45x45"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/str_my_favour"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="#33000000" />

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/str_feedback"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />
    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/str_setting"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />
    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/mine_scan"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />
    <LinearLayout
        android:id="@+id/ll_goods_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_item_bg_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/offset_18dp"
        android:paddingLeft="@dimen/offset_17dp"
        android:paddingRight="@dimen/offset_17dp"
        android:paddingTop="@dimen/offset_18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawablePadding="@dimen/offset_8dp"
            android:text="@string/str_goods_help"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/font_size_normal_high_more" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/offset_1px"
        android:layout_marginLeft="@dimen/offset_17dp"
        android:background="@color/color_d8d8d8" />




</LinearLayout>
</ScrollView>
